<resources>
    <string name="app_name">Chaud / Froid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Précédent</string>

    <string name="hello_first_fragment">Choisissez une photo pour commencer le défi</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="image">imageView</string>
    <string name="buttonImport">Importer une photo</string>
    <string name="bartext">barText</string>
    <string name="sensibilit_du_jeu">Sensibilité du jeu :</string>
    <string name="intro">Choisissez une photo pour commencer le défi</string>
    <string name="title_activity_start_game">Choisir la sensibilité du défi</string>
    <string name="box">box</string>
    <string name="title_activity_end_game">Vous avez gagné !</string>
    <string name="buttonPhoto">Prendre une photo</string>
    <string name="buttonShare">Partager</string>
    <string name="nord">Nord</string>
    <string name="sud">Sud</string>
    <string name="ouest">Ouest</string>
    <string name="est">Est</string>
</resources>