<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="689dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="312dp"
            android:layout_height="106dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="91dp"
            android:layout_marginRight="91dp"
            android:autofillHints=""
            android:focusable="false"
            android:ems="10"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@string/intro"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/importPhoto"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginStart="152dp"
            android:layout_marginLeft="152dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="58dp"
            android:layout_marginRight="58dp"
            android:layout_marginBottom="480dp"
            android:text="@string/buttonImport"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/todo"
        app:srcCompat="@android:drawable/ic_media_play" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>